完成几个基础功能

--- a/front/index.html
+++ b/front/index.html
@@ -8,5 +8,7 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.2&key=4e09e15a4affc04339b662d63ab7b3e2"></script>    
+    <script src="//webapi.amap.com/ui/1.0/main.js"></script>
   </body>
 </html>
